Access of import in LHS throws unexpected `SyntaxError` https://bugs.webkit.org/show_bug.cgi?id=247497 rdar://102064736

Reviewed by Mark Lam.

We should clear LHS count when evaluation AssignmentExpression for arguments of import,
since these assignment does not make import call assignment target. This patch fixes it.

* Source/JavaScriptCore/parser/Parser.cpp:
(JSC::Parser<LexerType>::parseMemberExpression):

Canonical link: https://commits.webkit.org/256470@main